# global-eval-paper

./: .gitignore  README.md  pyproject.toml
scripts/: plot_obs_map.py  plot_shf_etc_scatter.py  plot_shf_residuals.py  plot_tair_etc_scatter.py  plot_tair_nn_scatter.py  plot_tair_residuals.py  print_etc_table.py
utils/: methods.py
