[project]
name = "global-eval-paper"
version = "0.1.0"
description = "Plotting and table scripts to reproduce the figures and tables in the JTECH Spotter air-sea manuscript"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "pandas==2.3.3",
    "scipy==1.17.1",
    "plotly==6.8.0",
    "kaleido==1.3.0",
]
